# onedata_core

./: README.md  pyproject.toml
examples/: create_new_file.py  create_new_share.py  get_file_info.py  get_space_filetree.py
src/: main.py
src/api/: file_operations_api.py
src/converters/: __init__.py  abstract_converter.py  directory_children_converter.py  file_attributes_converter.py  space_converter.py
src/data/templates/: share_description.md
src/models/: __init__.py  file_entry.py  filesystem_entry.py  other_entry.py
src/models/filesystem/: dir_entry.py
src/models/space/: space.py  space_state.py
src/models/space/states/: __init__.py  with_root.py  without_root.py
src/onedata_wrapper/api/: __init__.py  file_operations_api.py  oneprovider_api.py  share_api.py  space_api.py
src/onedata_wrapper/converters/: abstract_converter.py  directory_children_converter.py  file_attributes_converter.py  oneprovider_converter.py  share_converter.py  space_converter.py
src/onedata_wrapper/models/filesystem/: __init__.py  dir_entry.py  entry_request.py  file_entry.py  filesystem_entry.py  filesystem_entry_request.py  new_directory_request.py  new_entry_request.py  new_file_request.py  new_symlink_request.py  other_entry.py  symlink_entry.py
src/onedata_wrapper/models/service/: oneprovider.py
src/onedata_wrapper/models/share/: new_share_request.py  share.py  share_request.py
src/onedata_wrapper/selectors/: abstract_selector.py  file_attribute.py
src/onedata_wrapper/utils/: filesystem.py  formatters.py
src/views/: example.py  onezone.py  space.py
(+10 files in other folders)
